--- a/backend/src/main/resources/application.properties
+++ b/backend/src/main/resources/application.properties
@@ -1,7 +1,7 @@
 spring.application.name=terraz
-spring.datasource.url=jdbc:postgresql://localhost:5432/postgres
-spring.datasource.username=admin
-spring.datasource.password=12345
+spring.datasource.url=jdbc:postgresql://localhost:5432/terraz
+spring.datasource.username=postgres
+spring.datasource.password=postgres
 spring.datasource.driver-class-name=org.postgresql.Driver
 
 spring.jpa.hibernate.ddl-auto=update
