--- a/backend/pom.xml
+++ b/backend/pom.xml
@@ -91,10 +91,11 @@
                 <artifactId>maven-checkstyle-plugin</artifactId>
                 <version>3.2.2</version>
                 <configuration>
-                    <configLocation>checkstyle.xml</configLocation>
-                    <encoding>UTF-8</encoding>
+                    <configLocation>${project.basedir}\src\main\resources\checkstyle\checkstyle.xml</configLocation>
                     <consoleOutput>true</consoleOutput>
                     <failsOnError>true</failsOnError>
+                    <encoding>UTF-8</encoding>
+                    <locale>pt_BR</locale>
                 </configuration>
                 <executions>
                     <execution>
