--- a/frontend/package.json
+++ b/frontend/package.json
@@ -11,7 +11,8 @@
     "formatter": "prettier --write \"src/**/*.{ts,tsx}\""
   },
   "dependencies": {
-    "@heroicons/react": "^2.2.0",
+    "@heroicons/react": "2.2.0",
+    "axios": "1.8.4",
     "react": "19.1.0",
     "react-dom": "19.1.0",
     "react-select": "5.10.1"
