--- a/frontend/package.json
+++ b/frontend/package.json
@@ -15,6 +15,7 @@
     "axios": "1.8.4",
     "react": "19.1.0",
     "react-dom": "19.1.0",
+    "react-draggable": "^4.4.6",
     "react-select": "5.10.1"
   },
   "devDependencies": {
